--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="header-content">
             <div class="inner">
                 <h1 class="cursive">Hello. I'm Eddie Cobian, a Front End Developer + Designer</h1>
-                <h4>Scroll down to see my work!</h4>
+              
                 <hr>
-                <a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
+                <a href="#one" class="btn btn-primary btn-xl page-scroll">Scroll down to see my work</a>
             </div>
         </div>
     </header>
