--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1 class="cursive">Hello. I'm Eddie Cobian, a Front End Developer + Designer</h1>
-              
+                <h1 class="cursive">Hello. I'm Eddie Cobian, a Front End Developer + Designer</h1>   
                 <hr>
                 <a href="#one" class="btn btn-primary btn-xl page-scroll">Scroll down to see my work</a>
             </div>
@@ -65,7 +64,7 @@
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
-                                    <h3>LeadFerret Homepage</h3>
+                                    <h3>LeadFerret - Homepage</h3>
                                 </div>
                             </div>
                         </div>
@@ -78,7 +77,7 @@
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
-                                     <h3>Inka's Bar & Grill Logo</h3>
+                                     <h3>Inka's Bar & Grill Logo for Peruvian Restaurant in Gaslamp District San Diego, Ca </h3>
                                 </div>
                             </div>
                         </div>
@@ -90,7 +89,7 @@
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
-                                    <h3>Informational-Flyer</h3>
+                                    <h3>LeadFerret - Informational-Flyer</h3>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +102,7 @@
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
-                                     <h3>Socia Media Banners</h3>
+                                     <h3> LeadFerret - Socia Media Banners</h3>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +114,7 @@
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
-                                    <h3>Presentation Layout</h3>
+                                    <h3> LeadFerret - PowerPoint Presentation Layout</h3>
                                 </div>
                             </div>
                         </div>
