--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
 		     <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/Work-Sample-02.jpg">
-                        <img src="./assets/powerpoint.png" class="img-responsive" alt="Image 6">
+                        <img src="./assets/Work-Sample-02.jpg" class="img-responsive" alt="Image 6">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
