--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
                         </div>
                     </a>
                 </div>
+		    <div class="col-lg-4 col-sm-6">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/Work-Sample-01.jpg">
+                        <img src="./assets/Work-Sample-01.jpg" class="img-responsive" alt="Image 6">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <h3> East West Bank - Internal Event Poster</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
