--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
-                                    <h3> East West Bank - Internal Event Poster</h3>
+                                    <h3> East West Bank - Webpage Redesign</h3>
                                 </div>
                             </div>
                         </div>
