--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1 class="cursive">Hello. I'm Eddie Cobian, a Front End Developer & Designer</h1>   
+                <h1 class="cursive">Hello. I'm Eddie Cobian, an Email Marekting Specialist & Designer</h1>   
                 <hr>
                 <a href="#one" class="btn btn-primary btn-xl page-scroll">Scroll down to see my work</a>
             </div>
